# acquire-driver-spinnaker

./: .clang-tidy  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  nightly-tag.yml  release.yml  test_pr.yml
cmake/: git-versioning.cmake  spinnaker.cmake
src/: CMakeLists.txt  spinnaker.cpp  unsupported.driver.c
tests/: CMakeLists.txt  abort-while-waiting-for-trigger.cpp  blackfly-abort-while-waiting-for-trigger.cpp  blackfly-configure-properties.cpp  blackfly-configure-triggering.cpp  blackfly-metadata.cpp  blackfly-one-video-stream.cpp  blackfly-repeat-start-no-stop.cpp  blackfly-repeat-start.cpp  configure-properties.cpp  configure-triggering.cpp  list-devices.cpp  one-video-stream.cpp  oryx-abort-while-waiting-for-trigger.cpp  oryx-configure-properties.cpp  oryx-configure-triggering.cpp  oryx-metadata.cpp  oryx-one-video-stream.cpp  oryx-repeat-start-no-stop.cpp  oryx-repeat-start.cpp  repeat-start-no-stop.cpp  repeat-start.cpp  set-packet-size.cpp  spinnaker-configure-properties.cpp
utils/: CMakeLists.txt  set-packet-size.cpp
